# aoc_2024

./: README.org  cabal.project
day_1/: day1.cabal
day_1/app/: Main.hs
day_2/: day2.cabal
day_2/app/: Main.hs
day_3/: day3.cabal
day_3/app/: Main.hs
day_4/: day4.cabal
day_4/app/: Main.hs
day_5/: day5.cabal
day_5/app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
